resolve languages into profileRegistrationCtrl  --skip-ci

--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -6,7 +6,11 @@
           class="m-x-auto text-center app-login-form">
 
       <a href="../index.html" class="app-brand m-b-lg">
-        <img src="../assets/img/brand.png" alt="brand">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="/assets/brand.png" alt="brand">
       </a>
 
       <!-- Email -->
