--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -1,83 +1,84 @@
 <h1>profile</h1>
 
-    <div class="col-md-3">
-      <div class="panel panel-default panel-profile m-b-md">
-        <div class="panel-heading" style="background-image: url(assets/img/iceland.jpg);"></div>
-        <div class="panel-body text-center">
-          <a href="profile/index.html">
-            <img
-              class="panel-profile-img"
-              src="assets/img/avatar-dhg.png">
-          </a>
+<div class="panel panel-default panel-profile m-b-md">
+  <div class="panel-heading" style="background-image: url(assets/iceland.jpg);"></div>
+  <div class="panel-body text-center">
+    <a href="profile/index.html">
+      <img
+        class="panel-profile-img"
+        src="assets/avatar-dhg.png">
+    </a>
 
-          <h5 class="panel-title">
-            <a class="text-inherit" href="profile/index.html">Dave Gamache</a>
-          </h5>
+    <h5 class="panel-title">
+      <a class="text-inherit" href="profile/index.html">Dave Gamache</a>
+    </h5>
 
-          <p class="m-b-md">I wish i was a little bit taller, wish i was a baller, wish i had a girl… also.</p>
+    <p class="m-b-md">I wish i was a little bit taller, wish i was a baller, wish i had a girl… also.</p>
 
-          <ul class="panel-menu">
-            <li class="panel-menu-item">
-              <a href="#userModal" class="text-inherit" data-toggle="modal">
-                Friends
-                <h5 class="m-y-0">12M</h5>
-              </a>
-            </li>
+    <ul class="panel-menu">
+      <li class="panel-menu-item">
+        <a href="#userModal" class="text-inherit" data-toggle="modal">
+          Friends
+          <h5 class="m-y-0">12M</h5>
+        </a>
+      </li>
 
-            <li class="panel-menu-item">
-              <a href="#userModal" class="text-inherit" data-toggle="modal">
-                Enemies
-                <h5 class="m-y-0">1</h5>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <li class="panel-menu-item">
+        <a href="#userModal" class="text-inherit" data-toggle="modal">
+          Enemies
+          <h5 class="m-y-0">1</h5>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
 
-      <div class="panel panel-default visible-md-block visible-lg-block">
-        <div class="panel-body">
-          <h5 class="m-t-0">About <small>· <a href="#">Edit</a></small></h5>
-          <ul class="list-unstyled list-spaced">
-            <li><span class="text-muted icon icon-calendar m-r"></span>Went to <a href="#">Oh, Canada</a>
-            <li><span class="text-muted icon icon-users m-r"></span>Became friends with <a href="#">Obama</a>
-            <li><span class="text-muted icon icon-github m-r"></span>Worked at <a href="#">Github</a>
-            <li><span class="text-muted icon icon-home m-r"></span>Lives in <a href="#">San Francisco, CA</a>
-            <li><span class="text-muted icon icon-location-pin m-r"></span>From <a href="#">Seattle, WA</a>
-          </ul>
-        </div>
-      </div>
-
-       <div class="panel panel-default visible-md-block visible-lg-block">
-        <div class="panel-body">
-          <h5 class="m-t-0">Photos <small>· <a href="#">Edit</a></small></h5>
-          <div data-grid="images" data-target-height="150">
-            <div>
-              <img data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_5.jpg">
-            </div>
-
-            <div>
-              <img data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_6.jpg">
-            </div>
-
-            <div>
-              <img data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_7.jpg">
-            </div>
-
-            <div>
-              <img data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_8.jpg">
-            </div>
-
-            <div>
-              <img data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_9.jpg">
-            </div>
-
-            <div>
-              <img data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_10.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="panel panel-default visible-md-block visible-lg-block">
+  <div class="panel-body">
+    <h5 class="m-t-0">About <small>· <a href="#">Edit</a></small></h5>
+    <div class="form-control" 
+      ng-show="!showEditAbout" 
+      ng-click="showEditAbout = !showEditAbout" 
+      style="border-style: none !important">
+      {{information.about}}
     </div>
+    <input class="form-control" 
+            type="text" 
+            ng-show="showEditAbout" 
+            ng-model="information.about">
+
+    <h5 class="m-t-0">Availability <small>· <a href="#">Edit</a></small></h5>
+    <div class="form-control" 
+          ng-show="!showEditAvailability" 
+          ng-click="showEditAvailability = !showEditAvailability" 
+          style="border-style: none !important">
+      {{information.availability}}
+    </div>
+
+    <input type="text" 
+            class="form-control" 
+            ng-show="showEditAvailability" 
+            ng-model="information.availability">
+  </div>
+</div>
+
+ <div class="panel panel-default visible-md-block visible-lg-block">
+  <div class="panel-body">
+    <h5 class="m-t-0">Programming Languages <small>· <a href="#">Edit</a></small></h5>
+    <div ng-repeat="pl in information.profile_languages" >
+    <div class="form-control" 
+          ng-click="showEditPL[pl.language_id] = !showEditPL[pl.language_id]"
+          ng-show="!showEditPL[pl.language_id]"
+          style="border-style: none !important">
+      {{languages[pl.language_id]}}: {{expLevel[pl.difficulty_id]}}
+    </div>
+    <input type="text" 
+          class="form-control" 
+          ng-show="showEditPL[pl.language_id]">
+  </div>
+  </div>
+</div>
+
 
 
 
@@ -98,52 +99,12 @@
   </div>
   <div class="panel-body">
     <div class="col-md-6">
-      <div >
-        <h3>About Me:</h3>
-        <div class="form-control" 
-              ng-show="!showEditAbout" 
-              ng-click="showEditAbout = !showEditAbout" 
-              style="border-style: none !important">
-          {{information.about}}
-        </div>
-        <input class="form-control" 
-                type="text" 
-                ng-show="showEditAbout" 
-                ng-model="information.about">
-      </div>
 
-      <div >
-        <h3>Availability: </h3>
-        <div class="form-control" 
-              ng-show="!showEditAvailability" 
-              ng-click="showEditAvailability = !showEditAvailability" 
-              style="border-style: none !important">
-          {{information.availability}}
-        </div>
 
-        <input type="text" 
-                class="form-control" 
-                ng-show="showEditAvailability" 
-                ng-model="information.availability">
-
-      </div>
     </div>
 
     <div class="col-md-6">
-      <div>
-        <h3>Programming Languages: </h3>
-        <div ng-repeat="pl in information.profile_languages" >
-          <div class="form-control" 
-                ng-click="showEditPL[pl.language_id] = !showEditPL[pl.language_id]"
-                ng-show="!showEditPL[pl.language_id]"
-                style="border-style: none !important">
-            {{languages[pl.language_id]}}: {{expLevel[pl.difficulty_id]}}
-          </div>
-          <input type="text" 
-                class="form-control" 
-                ng-show="showEditPL[pl.language_id]">
-        </div>
-      </div>
+
 
     </div>
     <button class="btn btn-danger">
