added link to dashboard on nav bar  --skip-ci

--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -19,7 +19,7 @@
           <a ui-sref="home">Codelegy</a>
         </li>
         <li>
-          <a href="#">Showcase</a>
+          <a ui-sref="projectsList">Dashboard</a>
         </li>
         <li>
           <a ui-sref="projects">Projects</a>
