dashboard profile form placeholder fixed  --skip-ci

--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -33,7 +33,7 @@
                     id='updatedAbout'
                     ng-model='profileUpdates.about'
                     ng-value='information.about'
-                    placeholder="information.about">
+                    placeholder="{{information.about}}">
           </div>
 
           <div class='col-sm-2'>
@@ -99,7 +99,7 @@
                     id='updatedAvailability'
                     ng-model='profileUpdates.availability'
                     ng-value='information.availability'
-                    placeholder="information.availability">
+                    placeholder="{{information.availability}}">
           </div>
 
           <div class='col-sm-2'>
