switching back to dashboard story contact link  --skip-ci

--- a/public/templates/projects_dashboard.html
+++ b/public/templates/projects_dashboard.html
@@ -39,6 +39,10 @@
               Membership
             </button>
 
+            <button>
+              Send a Message to the Group
+            </button>
+
           </div>
         </div>
       </div>
