group email modal for project list page  --skip-ci

--- a/public/templates/mailbox/inbox.html
+++ b/public/templates/mailbox/inbox.html
@@ -3,7 +3,10 @@
 
     <div class="col-md-12">
 
-        <h2>Inbox</h2>
+        <h2>Inbox
+          <button class='btn btn-info pull-right'>Compose</button>
+        </h2>
+
         <hr>
         <div ng-repeat="email in inbox">
 
