--- a/public/templates/projects_dashboard.html
+++ b/public/templates/projects_dashboard.html
@@ -18,7 +18,14 @@
           <div class="panel-body">
             <h4>{{project.title}}</h4>
             <hr>
-            <h5>{{project['owner?'] ? "Project Owner" : project.member_status }} </h5>
+
+            <h5>
+              {{project['owner?'] ? "Project Owner" : project.member_status }}
+              <button class="btn btn-default btn-sm pull-right" ng-if='(project.member_status == "member") || (project["owner?"])' data-toggle="modal" data-target="#mailModal{{project.id}}">
+                Send a Group Message
+              </button>
+            </h5>
+
             <p class="small text-muted">
               <div ng-hide="moreThan24HrsAgo(project.created_at)">
                 <i class="fa fa-clock-o fa-fw"></i>
@@ -35,81 +42,103 @@
             <img ng-repeat="lang in project.languages" src="{{lang.url}}" alt="{{lang.name}}"
             style="width:20px;margin:5px"> <br>
 
-            <button ng-show='project["owner?"]' data-toggle="modal" data-target="#myModal{{project.id}}">
+            <button ng-if='project["owner?"]' data-toggle="modal" data-target="#memberModal{{project.id}}" class="btn btn-sm btn-primary pull-right">
               {{project.pending_member_count ? (project.pending_member_count + ' Pending ') : 'Manage '}}
               Membership
-            </button>
-
-            <button>
-              Send a Message to the Group
             </button>
 
           </div>
         </div>
       </div>
 
-      <div class="modal fade" id="myModal{{project.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="mailModal{{project.id}}" tabindex="-1" role="dialog" aria-labelledby="mailModalLabel">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">{{project.title}}</h4>
+              <h4 class="modal-title" id="mailModalLabel">To: {{project.title}} Group</h4>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-12">
+                  <input type="text" class="form-control" placeholder="subject">
+                  <br>
+                  <textarea class="form-control" placeholder="Write your message here">
+                  </textarea>
+                  <br>
+                  <button class="btn btn-success pull-right btn-sm"
+                  ng-click="sendMessage(project)"
+                  data-dismiss="modal" aria-label="Close"
+                  >
+                    Send
+                  </button>
+                </div>
+              </div>
+            </div> <!-- end modal body-->
+          </div>
+        </div>
+      </div><!-- end modal -->
+
+      <div class="modal fade" id="memberModal{{project.id}}" tabindex="-1" role="dialog" aria-labelledby="memberModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="memberModalLabel">{{project.title}}</h4>
             </div>
             <div class="modal-body">
               <div class="row">
                 <div class= "col-md-7">
-                <div class="panel panel-default">
-                  <div class = 'panel-heading'>
-                    <h4 class ='panel-title'>Project Description</h4>
-                  </div>
-                  <div class="panel-body">
-                    {{project.description}}
+                  <div class="panel panel-default">
+                    <div class = 'panel-heading'>
+                      <h4 class ='panel-title'>Project Description</h4>
+                    </div>
+                    <div class="panel-body">
+                      {{project.description}}
+                    </div>
                   </div>
                 </div>
-              </div>
                 <div class="col-md-5">
-                <div class=" panel panel-default">
-                  <div class = 'panel-heading'>
-                    <h4 class ='panel-title'>Project Members</h4>
-                  </div>
-                  <div class="panel-body">
-                    <ul>
-                      <li>Owner</li>
-                      <li ng-repeat="membership in project.memberships" ng-hide="membership.participant_type=='owner'">
-                        {{membership.user}}
-                        <button class="btn btn-success btn-xs"
-                        ng-show="membership.participant_type=='pending'"
-                        ng-click="changeMembership(membership, project, true)"
-                        >
+                  <div class=" panel panel-default">
+                    <div class = 'panel-heading'>
+                      <h4 class ='panel-title'>Project Members</h4>
+                    </div>
+                    <div class="panel-body">
+                      <ul>
+                        <li>Owner</li>
+                        <li ng-repeat="membership in project.memberships" ng-hide="membership.participant_type=='owner'">
+                          {{membership.user}}
+                          <button class="btn btn-success btn-xs"
+                          ng-show="membership.participant_type=='pending'"
+                          ng-click="changeMembership(membership, project, true)"
+                          >
                           Accept
                         </button>
                         <button class="btn btn-danger btn-xs"
                         ng-show="membership.participant_type=='pending'"
                         ng-click="changeMembership(membership, project, false)"
                         >
-                          Reject
-                        </button>
-                        <span ng-show="membership.participant_type == 'rejected'">
-                          (Rejected)
-                        </span>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
+                        Reject
+                      </button>
+                      <span ng-show="membership.participant_type == 'rejected'">
+                        (Rejected)
+                      </span>
+                    </li>
+                  </ul>
                 </div>
               </div>
-
-
-            </div> <!-- end modal body-->
-
-<!--        <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div> -->
-
+            </div>
           </div>
-        </div>
-      </div><!-- end modal -->
+        </div> <!-- end modal body-->
+
+  <!--        <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div> -->
+
+            </div>
+          </div>
+        </div><!-- end modal -->
 
     </div><!-- end ng-repeat projects -->
 
