updated seeds file and new project page  --skip-ci

--- a/public/templates/projects/new.html
+++ b/public/templates/projects/new.html
@@ -15,8 +15,8 @@
     </div>
       <option value="1" id="">Beginner</option>
       <option value="2" id="">Intermediate</option>
-      <option value="3" id="">Expert</option>
-      <option value="4" id="">Master</option>
+      <option value="3" id="">Advanced</option>
+      <option value="4" id="">Expert</option>
     </select>
     <br>
     <button class="btn btn-primary" ng-click="submit(newProject)">
