--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -30,7 +30,7 @@
 <div class="row">
   <div class="col-sm-3"><h2>Projects</h2></div>
   <div class="col-sm-4 col-sm-offset-3">
-    <button ui-sref="projects.new"
+    <button ng-show="signedIn" ui-sref="projects.new"
     class="btn btn-primary pull-right">New Project</button>
 
   </div>
