disable future incomplete stories for now, add create mailbox controller action  --skip-ci

--- a/public/templates/mailbox/inbox.html
+++ b/public/templates/mailbox/inbox.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
 
         <h2>Inbox
-          <button class='btn btn-info pull-right'>Compose</button>
+          <!-- <button class='btn btn-info pull-right'>Compose</button> -->
         </h2>
 
         <hr>
