--- a/public/templates/projects_dashboard.html
+++ b/public/templates/projects_dashboard.html
@@ -61,10 +61,9 @@
             <div class="modal-body">
               <div class="row">
                 <div class="col-md-12">
-                  <input type="text" class="form-control" placeholder="subject">
+                  <input type="text" class="form-control" placeholder="subject" ng-model="subject">
                   <br>
-                  <textarea class="form-control" placeholder="Write your message here">
-                  </textarea>
+                  <textarea class="form-control" placeholder="Write your message here" ng-model="body"></textarea>
                   <br>
                   <button class="btn btn-success pull-right btn-sm"
                   ng-click="sendMessage(project)"
