--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -4,10 +4,10 @@
 
 @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
 
-#updatedAbout, #updatedAvailability{
+#updatedAbout, #updatedAvailability, #updatedLanguage{
   border: 0;
   outline: 0;
   margin: 0px;
   padding-bottom: 0px;
   border-bottom: 2px solid gray;
-} 
+}
