cleaned up some code  --skip-ci

--- a/app/views/user_mailer/request_membership.text.erb
+++ b/app/views/user_mailer/request_membership.text.erb
@@ -1,6 +1,6 @@
 Dear <%= @user.email %>
 
-You have a new member request for <%= @project.title %>!
+You have a message regarding <%= @project.title %>!
 
 <%= link_to "Go to your codelegy dashboard", domain_url %>
 
