--- a/public/templates/projects_dashboard.html
+++ b/public/templates/projects_dashboard.html
@@ -1,5 +1,4 @@
 
-<hr><hr>
 
 <main>
   <br>
@@ -10,6 +9,15 @@
       <h1 class="h3 pull-left margin-none">Projects</h1>
 
       <div class="clearfix"></div>
+    </div>
+    <div class="row" ng-if="!list.projectList.projects.length">
+      <div class="col-sm-12">
+        <p>Looks like you haven't joined any projects yet!</p>
+        <p>Go to the
+          <a ui-sref="projects">Projects</a>
+          to find one you like or
+          <a ui-sref="projects.new">make your own</a>.</p>
+      </div>
     </div>
 
     <div class="row" ng-repeat="project in list.projectList.projects | orderBy:'-created_at': false">
