--- a/public/templates/projects_dashboard.html
+++ b/public/templates/projects_dashboard.html
@@ -10,6 +10,7 @@
 
       <div class="clearfix"></div>
     </div>
+<!--     {{!list.projectList.projects.length}} -->
     <div class="row" ng-if="!list.projectList.projects.length">
       <div class="col-sm-12">
         <p>Looks like you haven't joined any projects yet!</p>
