--- a/public/templates/mailbox/inbox.html
+++ b/public/templates/mailbox/inbox.html
@@ -23,8 +23,8 @@
           <div ng-repeat="email in inbox">
 
             <div ui-sref = "email({'id': email.id})">
-              <h5>From: {{email.sender_username}} at {{email.date | date}}</h5>
-              <h4>{{email.subject}}</h4>
+              <h5>From: {{email.sender_username}}  at {{email.date | date}}</h5>
+              <h4>{{email.subject | limitCharDisplayFilter}}</h4>
             </div>
             <hr>
           </div>
