edit languages from user dashboard complete  --skip-ci

--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -133,7 +133,7 @@
     <h5 class="m-t-0">
       Programming Languages
       <small>·
-        <a href="#">Edit</a>
+        <a href="#">Add</a>
       </small>
     </h5>
     <div dashboard-programming-language
